# bbby_btyd

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  ggf.pkl  main.py  mbg.pkl  pyproject.toml  requirements.txt  setup.cfg  setup.py  user_input.html
.github/: dependabot.yaml
environment/: env.yaml  req.txt  requirements.txt
notebooks/: eda.ipynb
src/: main.py  scorer.py  trainer.py
src/utils/: logging.py  scorer.py  trainer.py
static/css/: template.css
templates/: demo_result.html  home.html  template.html  train_score.html  user_input.html
utils/: scorer.py  trainer.py
xform/: scorer.py
