[build-system]
requires = ["setuptools==72.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "packai"
version = "0.0.1-alpha"
authors = [
]
maintainers = [
]
readme = "README.md"
requires-python = "==3.9.19"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
# version = {attr = "packai.version"}

[project.urls]
Homepage = ""
Issues = "/issues"
Changelog = "/CHANGELOG.md"

[tool.semantic_release]
version_variable = "setup.py:__version__"
